syntax = "proto3";

package user;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string password = 4;
  string email = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserList {
  repeated User user = 1;
}